add Home subpage

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -4,7 +4,9 @@
 @import 'partials/elements';
 
 @import 'partials/header';
+
 @import 'partials/cart';
 
+@import 'partials/home';
 @import 'partials/product';
 @import 'partials/booking';
